<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewTodoFragment">

    <TextView
        android:id="@+id/new_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Todo"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_title_input_layout"
        app:layout_constraintTop_toBottomOf="@id/new_todo_title"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Title">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/todo_title_input"
            android:layout_width="match_parent"
            tools:text="Example title"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_todo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todo_title_input_layout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Create todo"/>

</android.support.constraint.ConstraintLayout>